iptables.rules
# Generated by iptables-save v1.4.14 on Wed Jun  3 11:42:48 2015
*nat
:PREROUTING ACCEPT [46:3657]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [327:20401]
:POSTROUTING ACCEPT [327:20401]
-A PREROUTING -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 22
COMMIT
# Completed on Wed Jun  3 11:42:48 2015
# Generated by iptables-save v1.4.14 on Wed Jun  3 11:42:48 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [258:26886]
:INPUTLOGGING - [0:0]
:FORWARDLOGGING - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j DROP -d 224.0.0.0/24
-A INPUT -j INPUTLOGGING
-A INPUTLOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables-Dropped: "
-A INPUTLOGGING -j DROP
-A FORWARD -j FORWARDLOGGING
-A FORWARDLOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables-Forward-Dropped: "
-A FORWARDLOGGING -j DROP
COMMIT
# Completed on Wed Jun  3 11:42:48 2015
